# salam

./: .licensesnip  Cargo.toml  README.md  build.rs  meson.build  meson_options.txt  salam.rs
.github/workflows/: rust-clippy.yml
data/: io.github.malfisya.salam.metainfo.xml  salam.desktop
scripts/: install-cargo-bin.sh
src/: main.rs
ui/: images.slint  main.slint  welcome.slint
ui/components/: callbacks.slint  images.slint  sidebar.slint
ui/pages/: donation.slint  firststart.slint  liveiso.slint
